--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       <h1 class="center title">My TODO App</h1>
       <div class="flow-right controls">
         <span>Item count: <span id="item-count">0</span></span>
+        <span>Unchecked count: <span id="unchecked-count">0</span></span>
       </div>
       <button class="button center" onClick="newTodo()">New TODO</button>
       <ul id="todo-list" class="todo-list"></ul>
     </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
